--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ DB_DATABASE=practice
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
