--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "vue": "^2.6.10",
         "vue-router": "^3.0.6",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "ioredis": "^4.9.5",
+        "socket.io": "^2.2.0"
     }
 }
