--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "ioredis": "^4.9.5",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.2.0",
+        "vue-stripe-checkout": "^1.2.6"
     }
 }
